# mumps

./: .gitignore  BLIS_SETUP.md  CMakeLists.txt  INSTALL  KNOWN_ISSUES.md  MODERNIZATION_STATUS.md  Makefile  Makefile.inc  Makefile.vendor  PYTHON_INTERFACE_STATUS.md  README.md  TEMPLATE_ROLLOUT_FINAL_STATUS.md  TEMPLATE_ROLLOUT_PLAN.md  TEMPLATE_ROLLOUT_STATUS.md  TESTING.md  VENDOR_TESTING.md  pyproject.toml
.github/workflows/: language-standards-gate.yml
benchmarks/: blas_large_matrix_cases.tsv
benchmarks/matrices/: README.md  fixtures.json  test_huge_200x200_laplacian.coo  test_huge_50000_tridiagonal.coo  test_large_10000_tridiagonal.coo  test_large_100x100_laplacian.coo  test_medium_1000_tridiagonal.coo  test_medium_1000x1000_diagonal.coo  test_medium_50x50_laplacian.coo  test_small_100_tridiagonal.coo  test_small_10x10_laplacian.coo  test_tiny_10x10_diagonal.coo
cli/: __init__.py  _runner.py  flowchart.py  lib_detect.py  mumps_cli.py
cmake/: MUMPSConfig.cmake.in  mumps.pc.in
docs/: BUILD_SYSTEM_IMPROVEMENTS_SUMMARY.md  C23_FORTRAN_MODERNIZATION_REPORT.md  C23_MIGRATION_ASSESSMENT.md  C23_MIGRATION_SUCCESS.md  CMAKE_BUILD_GUIDE.md  CMAKE_SMART_BUILD_GUIDE.md  CODE_DEDUPLICATION_ANALYSIS.md  CRITICAL_FINDINGS.md  F23_C23_PORTING_TRACKER.md  FORTRAN_MODERNIZATION_FINAL_STATUS.md  FREE_FORM_CONVERSION_STATUS.md  INCREMENTAL_BUILD_GUIDE.md  LANGUAGE_STANDARDS_COMPLETION_CHECKLIST.md  ORDERING_VERIFICATION.md  PHASE1_RESULTS.md  PILOT_TEMPLATE_DEMO.md  QUICKSTART.md  README.md  STRICT_STANDARDS_ACTION_PLAN.md  TEMPLATE_ROLLOUT_PLAN.md  TEMPLATE_SYSTEM_GUIDE.md  TEST_DEVELOPMENT_PLAN.md  TEST_LANGUAGE_ANALYSIS.md
examples/: CMakeLists.txt  Makefile  README  cgemm_bench.F90  cmumps_bench.c  dgemm_bench.F90  dmumps_bench.c  generic_interface_demo.f90  run_all_tests.sh  sgemm_bench.F90  smumps_bench.c  test_all_blas_vendors.sh  zgemm_bench.F90  zmumps_bench.c
libseq/: Makefile
python/: README.md
python/pymumps/: __init__.py  mumps.py
scripts/: analyze_test_results.py  benchmark_blas.sh  benchmark_blas_dense.sh  check_blas_correctness.sh  check_language_standards_completion.sh  clean_project.sh  cmake_template_status.sh  compare_vendors.sh  convert_fixed_to_free_form.py  fix_standalone_ampersands.sh  fortran_analyze_goto.py  fortran_fixed_to_free.py  fortran_modernize_do.py  fortran_simple_goto_convert.py  generate_from_template.sh  generate_test_matrices.py  ingest_benchmark_results_sqlite.py  quick_vendor_test.sh  rebuild_vendor_libraries.sh  run_all_benchmarks_to_sqlite.sh  run_tests.sh  smart_build.sh  start_webapp.sh  test_all_vendors.sh  verify_template_generation.sh
src/: Makefile  ana_AMDMF.F  ana_blk.F  ana_blk_m.f90  ana_omp_m.F  ana_orderings.F  ana_orderings_wrappers_m.F  ana_set_ordering.F  bcast_errors.F  cana_LDLT_preprocess.F  cana_aux.F  cana_aux_par.F  cana_dist_m.F  cana_driver.F  cana_lr.F  cfac_asm.F  cfac_asm_ELT.F  cfac_asm_master_ELT_m.F  cfac_asm_master_m.F  cfac_b.F  cfac_compact_factors_m.F  cfac_determinant.F  cfac_diag.f90  cfac_dist_arrowheads_omp.F  cfac_distrib_ELT.F  cfac_distrib_distentry.F  cfac_driver.F  cfac_front_LDLT_type1.F  cfac_front_LDLT_type2.F  cfac_front_LU_type1.F  cfac_front_LU_type2.F  cfac_front_aux.F  cfac_front_type2_aux.F  cfac_lastrtnelind.F  cfac_lr.F  cfac_mem_alloc_cb.F  cfac_mem_compress_cb.F  cfac_mem_dynamic.F  cfac_mem_free_block_cb.F  cfac_mem_stack.F  (+320 more)
src/PORD/: CMakeLists.txt
src/libseq/: Makefile
src/templates/: ana_LDLT_preprocess.F.in  ana_aux.F.in  ana_aux_ELT.F.in  ana_aux_par.F.in  ana_dist_m.F.in  ana_driver.F.in  ana_lr.F.in  ana_mtrans.F.in  ana_reordertree.F.in  arrowheads.F.in  bcast_int.F.in  end_driver.F.in  fac_asm.F.in  fac_asm_ELT.F.in  fac_asm_master_ELT_m.F.in  fac_asm_master_m.F.in  fac_b.F.in  fac_compact_factors_m.F.in  fac_determinant.F.in  fac_diag.f90.in  fac_dist_arrowheads_omp.F.in  fac_distrib_ELT.F.in  fac_distrib_distentry.F.in  fac_driver.F.in  fac_front_LDLT_type1.F.in  fac_front_LDLT_type2.F.in  fac_front_LU_type1.F.in  fac_front_LU_type2.F.in  fac_front_aux.F.in  fac_front_type2_aux.F.in  fac_lastrtnelind.F.in  fac_lr.F.in  fac_mem_alloc_cb.F.in  fac_mem_compress_cb.F.in  fac_mem_dynamic.F.in  fac_mem_free_block_cb.F.in  fac_mem_stack.F.in  fac_mem_stack_aux.F.in  fac_omp_m.F.in  fac_par_m.F.in  (+60 more)
tests/: README.md  conftest.py  pytest.ini  pytest_sqlite_plugin.py  test_generate_test_matrices.py  test_ingest_benchmark_results_sqlite.py  test_mumps.py  test_vendors.py
webapp/: README.md  __init__.py  main.py  requirements.txt
webapp/static/: style.css
webapp/templates/: 404.html  base.html  benchmark_detail.html  benchmarks.html  cli.html  docs.html  index.html  migration.html  modules.html  pytest.html  pytest_session.html  results.html  system_detail.html  systems.html
