[project]
name = "pymumps"
version = "5.8.2"
description = "Python interface to MUMPS sparse direct solver"
readme = "python/README.md"
requires-python = ">=3.8"
license = {text = "CeCILL-C"}
authors = [
    {name = "MUMPS Development Team"},
]
keywords = ["sparse", "linear-solver", "mumps", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-env>=1.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-env>=1.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "graphviz>=0.20.0",
]

[project.scripts]
mumps = "cli.mumps_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymumps"]
package-dir = {"" = "python"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --color=yes --sqlite-db=mumps.sqlite"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "vendor: marks tests for specific BLAS vendors",
]

# pytest-env plugin: Set environment variables before pytest starts
# This allows "uv run pytest" to work without wrapper script
# Paths are relative to the tests/ directory where pytest runs
[tool.pytest_env]
LD_LIBRARY_PATH = "../lib:../src/PORD/lib"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
